tests/testcase/errors/string_immutable_assignment.ob
fun main() do
  let str = "Hello";
  str[0] = 72;
  return str[0];
end